76) Transmission update to 2.33 version.<br>
77) Add blkid need for automount.<br>
78) PPPOE must flush connections when MAC address changes too.<br>
79) Usbctl fix device detect.<br>
80) pppd: pptp plugin some bugfixes.<br>

<br>         
<b>1.9.x</b><br>
1) Fix use /etc/hosts dnsmasq.<br>
2) Fix /etc/hosts generate if wan_ip="".<br>
3) Increase samba buffers size if usb enabled.<br>
4) Update xl2tpd to 1.3.0 version.<br>
5) Update miniupnp and libnatpmp to 30072011 version.<br>
6) Merge ipv6 stable patches from upstream.<br>
7) Remove pppd_dead workaround (no more need).<br>
8) McastPhyMode set to 3 (HTMIX) by default (0:Disable 1:CCK, 2:OFDM, 3:HTMIX need add in webui).<br>
9) Backport some fixes (ipv6/igmp) from upstream.<br>
10) Disable IGDv2 for miniupnpd (this is not stable option).<br>
11) usb_modeswitch: add new devices support.<br>
12) For devices supported usb storage add /opt dir. Need for optware support.<br>
13) busybox up to 1.19.0 version.<br>
14) miniupnpd disable USE_IFNAME_IN_RULES by default.<br>
15) miniupnpd fix start script.<br>
16) zcip.script: fix environment variable.<br>
17) Reconfigure busybox for some memory save.<br>
18) udhcpd set FEATURE_UDHCPD_BASE_IP_ON_MAC per default.<br>
19) iptables/netfilter speedup.<br>
20) usb_modeswitch update to 1.1.9 version.<br>
21) Fix usb autodetect scripts.<br>
22) Apply post 1.19.0 busybox patches.<br>
23) Fix CONFIG_NLS_DEFAULT in config (utf->utf8).<br>
24) Update kernel nls subsystem.<br>
25) automount.sh first try mount with utf8 codepage.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>